Overflow Fixed

--- a/assets/css/2-basics/_body-element.sass
+++ b/assets/css/2-basics/_body-element.sass
@@ -12,6 +12,9 @@ body
   padding: 0px
   overflow-x: hidden
 
+  .wrapper
+    overflow-x: hidden
+
 
 @media (max-width: 800px)
   body
